--- a/packages/quakk/Cargo.toml
+++ b/packages/quakk/Cargo.toml
@@ -12,3 +12,6 @@ workspace = true
 [dependencies]
 anyhow.workspace = true
 serde_json = "1.0.148"
+dyn-eq = { version = "0.1.3", features = ["alloc"] }
+dyn-clone = "1.0.20"
+dyn-hash = "1.0.0"
